# exerciser

./: .gitignore
c-book/: main.c  meson.build
c-book/.zed/: debug.json
c-book/include/: bin_search.h  character_amount.h  count_whitespace.h  detab.h  entab.h  eof_print.h  ftoc.h  header.h  htoi.h  input_histogram.h  is_eof.h  longest_line.h  print_long_line.h  printable_whitespace.h  remove_line_blank.h  replace_whitespace.h  reverse_ftoc.h  reverse_line.h  str_any.h  word_count.h  word_space_print.h
c-book/src/: bin_search.c  character_amount.c  count_whitespace.c  detab.c  entab.c  eof_print.c  ftoc.c  header.c  hello_world.c  htoi.c  input_histogram.c  is_eof.c  longest_line.c  print_long_line.c  printable_whitespace.c  remove_line_blank.c  replace_whitespace.c  reverse_ftoc.c  reverse_line.c  squeeze.c  str_any.c  word_count.c  word_space_print.c
codewars/ip-validation/: .gitignore  main.c
codewars/ip-validation/.zed/: debug.json
codewars/ip-validation/scripts/: build.sh  run.sh
exercism/c/resistor-color/: resistor_color.c  resistor_color.h
